fixed spacing issue with cart

--- a/css/grid.css
+++ b/css/grid.css
@@ -10,15 +10,6 @@
 	text-align: center;
 }
 
-/*Catherine*/
-.grid {
-     margin-left: auto;
-     margin-right: auto;
-     width: 95%;
-}
-
-
-/* JANES GRID */
 .col-1of8 {
 	float: left;
 	width: 12.5%;
@@ -87,13 +78,19 @@
 	width: 33.333%;
 }
 
+@media (max-width: 45em) {
+	.col-4of12 {
+		width: 100%;
+	}
+}
+
 .col-4of12-menu {
 	padding: 0;
 	width: 33.333%;
 }
 
 @media (max-width: 45em) {
-	.col-4of12 {
+	.col-4of12-menu {
 		width: 100%;
 	}
 }
@@ -110,49 +107,15 @@
 	}
 }
 
-/* JANES GRID END */
-
-.col-1of12-2{
-	float: left;
-	padding-left: 13.25em;
-	position: relative;
-	top: -30px;
-	width: 8.333%
-}
-
-.col-2of12{
-	/*float: left;*/
-	width: 16.666%
-}
-
-.col-3of12{
-	width: 25%;
-}
-
-.image-text, .quick-view-box, .updates-events, .product-images, .video-navigation{
-	clear: both;
-}
-
-.col-5of12-2{
-	padding-top: 2em;
-	text-align: left;
-	width: 41.666%
-}
-
-.col-6of12-2{
-	padding-top: 2em;
-	padding-right: 0;
-	width: 50%
-}
-
 .col-8of12{
-	width: 66.666%
+	width: 66.666%;
+	padding-top: 2em;
 }
 
-.col-10of12{
-	padding-top: 2em;
-	padding-left: 2em;/*pretty sure this is not how you center align*/
-	width: 83.333%
+@media (max-width: 66.666em) {
+	.col-8of12 {
+		width: 100%;
+	}
 }
 
 .grid:after{
